// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Small API 1`] = `
.c0 {
  font-size: 0.923rem;
}

<Small>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "Small-sc-275w8q-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  font-size: ",
            [Function],
            ";
",
          ],
        },
        "displayName": "Small",
        "render": [Function],
        "styledComponentId": "Small-sc-275w8q-0",
        "target": "small",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <small
      className="c0"
    >
      Small content
    </small>
  </StyledComponent>
</Small>
`;

exports[`Storyshots Small With color 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

.c3 > *:nth-child(2) .c0 {
  margin-top: 5px;
}

.c2 {
  font-size: 0.923rem;
}

<P
  color="primary"
>
  <StyledComponent
    color="primary"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "c0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <p
      className="c0 c1"
      color="primary"
    >
      Nisi eu eiusmod cupidatat aute laboris commodo excepteur
      <Small>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "Small-sc-275w8q-0",
                "isStatic": false,
                "lastClassName": "c2",
                "rules": Array [
                  "
  font-size: ",
                  [Function],
                  ";
",
                ],
              },
              "displayName": "Small",
              "render": [Function],
              "styledComponentId": "Small-sc-275w8q-0",
              "target": "small",
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <small
            className="c2"
          >
             Small content 
          </small>
        </StyledComponent>
      </Small>
      incididunt incididunt aliquip pariatur est minim officia sit.
    </p>
  </StyledComponent>
</P>
`;

exports[`Storyshots Small Within <P> 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
}

.c3 > *:nth-child(2) .c0 {
  margin-top: 5px;
}

.c2 {
  font-size: 0.923rem;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "c0",
          "isStatic": false,
          "lastClassName": "c1",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "c0",
        "target": "p",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <p
      className="c0 c1"
    >
      Nisi eu eiusmod cupidatat aute laboris commodo excepteur
      <Small>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": undefined,
              "componentStyle": ComponentStyle {
                "componentId": "Small-sc-275w8q-0",
                "isStatic": false,
                "lastClassName": "c2",
                "rules": Array [
                  "
  font-size: ",
                  [Function],
                  ";
",
                ],
              },
              "displayName": "Small",
              "render": [Function],
              "styledComponentId": "Small-sc-275w8q-0",
              "target": "small",
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <small
            className="c2"
          >
             Small content 
          </small>
        </StyledComponent>
      </Small>
      incididunt incididunt aliquip pariatur est minim officia sit.
    </p>
  </StyledComponent>
</P>
`;
